hphp/hack/test/typecheck/array_map4.php.exp
File "array_map4.php", line 4, characters 13-14:
Invalid argument (Typing[4110])
File "stdlib/builtins_array.hhi", line 115, characters 10-18:
This is a function
File "array_map4.php", line 3, characters 15-28:
It is incompatible with an object of type Container
